# mcp-tools

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mcptools/: __init__.py  corpus.json  grading.py  live.py  obs.py  server.py  store.py  tools.py
tests/: test_grading.py  test_live.py  test_obs.py  test_server.py  test_store.py
